# AOC2022

./: Cargo.toml  README.md
src/: common.rs  lib.rs  main.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
