[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc2022_lib"
proc-macro = true

[dependencies]
itertools = "0.10.5"
regex = "1.7.0"
syn = { version = "1.0.105", features = ["full"] }
quote = "1.0.21"